Коммит с учётом замечаний ревьювера

--- a/src/components/chat_item/chat_item.hbs
+++ b/src/components/chat_item/chat_item.hbs
@@ -1,6 +1,6 @@
 <div class="chat-item">
     <a href="#" class="chat-item__avatar-wrap" chat="{{ id }}">
-        <img class="chat-item__avatar" src="{{ avatar }}" alt="">
+        <img class="chat-item__avatar" src="{{ avatar }}" alt="{{ name }} avatar">
     </a>
     <div class="chat-item__head">
         <a href="#" class="chat-item__name" chat="{{ id }}">{{ name }}</a>
