--- a/src/pages/nav/nav.hbs
+++ b/src/pages/nav/nav.hbs
@@ -4,10 +4,12 @@
             <img class="nav__logo" src="/public/wm.svg" alt="">
         </div>
         <h1 class="nav__title">Hello World!</h1>
-        <ul class="nav__list">
-            {{#each pages }}
-            <li class="nav__list-li"><a class="nav__list-a" href="#" page="{{this}}">{{this}}</a></li>
-            {{/each}}
-        </ul>
+        <nav class="nav__list-wrap">
+            <ul class="nav__list">
+                {{#each pages }}
+                <li class="nav__list-li"><a class="nav__list-a" href="#" page="{{this}}">{{this}}</a></li>
+                {{/each}}
+            </ul>
+        </nav>
     </div>
 </div>
