--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -10,6 +10,9 @@
 .form__login{
     .input{grid-column-end: span 2;}
 }
+.form__signup{
+    .input{grid-column-end: span 2;}
+}
 .form__login-wrap{grid-column-end: span 2;display: grid;grid-template-columns: 1fr 1fr;grid-gap: 0 6px;}
 .form__row{
     position: relative;margin: 0 0 10px 0;
@@ -17,4 +20,7 @@
     &_2col{display: grid;grid-template: auto / 1fr 1fr;grid-gap: 0 6px;}
     .input,
     .button{margin: 0;}
+}
+.form__signup-wrap{
+    grid-column-end: span 2;display: grid;grid-template-columns: 1fr 1fr;grid-gap: 0 6px;
 }
