--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,4 @@
-$white: #fff;
-$dark: #000;
-$blue: #0577ff;
-$message_blue: #89bfff;
-$dark_blue: #225da3;
-$grey: #e3e3e3;
-$red: #a82b2b;
-$main_font: 'Roboto', sans-serif;
+@import './vars.css';
 
 :root{
     --action-color: $dark_blue;
