--- a/src/pages/chat/chat.css
+++ b/src/pages/chat/chat.css
@@ -21,7 +21,10 @@
 .chat__form-attach-btn{
     &::before{content: '+';}
 }
-.chat__message{height: 50px;padding: 0 16px;border-radius: 25px; background-color: var(--grey-color);}
+.chat__message{
+    height: 50px;padding: 0 16px;border-radius: 25px; background-color: var(--grey-color);
+    &_error{color: #930000;background-color: #ffd4d4;font-weight: 600;}
+}
 .chat__form-submit{
     position: relative;aspect-ratio: 1/1;padding: 6px; border-radius: 50%;background-color: var(--blue-color);
     &::before{content: url('/public/send.svg');display: block;width: 100%;height: 100%;}
