--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -7,6 +7,10 @@
     &_greytext{color: #444;}
     &_hidden{display: none;}
     &_normweight{font-weight: 400;}
+    &_logout{
+        display: inline-flex;align-items: center;gap: 4px;color: #a00;font-weight: 400;
+        &::before{content: url('/public/logout.svg');width: 16px;height: 17px;}
+    }
     &.loading{
         color: transparent;
         &::before{content: url('/public/load.svg');position: absolute;left: calc(50% - 15px);top: calc(50% - 15px);width: 30px;height: 30px;}
