--- a/src/components/chat_item/chat_item.css
+++ b/src/components/chat_item/chat_item.css
@@ -1,6 +1,6 @@
 .chat-item{
     position: relative;display: grid;grid-template: 'avatar head head' auto 'avatar msg count' auto / 60px 1fr auto;
-    grid-gap: 6px 10px;padding: 15px 0 15px 0;
+    grid-gap: 6px 10px;padding: 15px 14px 15px 14px;
     &__avatar-wrap{grid-area: avatar;position: relative;aspect-ratio: 1/1;border-radius: 50%;overflow: hidden;}
     &__avatar{width: 100%;height: 100%;}
     &__head{grid-area: head;display: flex;align-items: flex-end;justify-content: space-between;}
