--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -15,6 +15,10 @@
         color: transparent;
         &::before{content: url('/public/load.svg');position: absolute;left: calc(50% - 15px);top: calc(50% - 15px);width: 30px;height: 30px;}
     }
+    &_chat-settings{
+        aspect-ratio: 1/1;padding: 0;
+        &::before{content: url('/public/settings.svg');width: 100%;height: 100%;}
+    }
 }
 .button-prof-left{
     &::before{content: url('/public/profile.svg');display: inline-block;width: 14px;height: 14px;margin: 0 4px 0 0;}
