--- a/src/components/chat-users/chat-users.css
+++ b/src/components/chat-users/chat-users.css
@@ -15,6 +15,7 @@
 .chat-user{
     position: relative;display: flex;align-items: center;gap: 6px;padding: 4px 16px 4px 4px;border-radius: 30px;
     background-color: #e3e3e3;cursor: pointer;
+    &_admin{background-color: #afeca6}
     *{cursor: pointer;}
     &__avatar{width: 34px;aspect-ratio: 1/1;border-radius: 50%;}
     &__name{font-weight: 400;}
