--- a/src/components/modal-user/modal-user.css
+++ b/src/components/modal-user/modal-user.css
@@ -1,4 +1,4 @@
-.adduser-modal{
+.user-modal{
     position: fixed;z-index: 999;left: 0;top: 0;width: 100%;height: 100%;display: flex;align-items: center;
     justify-content: center;background-color: #000000a3;
     &__wrap{
@@ -9,15 +9,21 @@
     &__title{font-weight: 500;}
     .modal__close-btn{}
     &__content{
-
+        display: grid;grid-template: 'av' auto 'name' auto 'mng' auto / 100%;grid-gap: 14px;
     }
-}
-
-.adduser-form{
-    position: relative;display: flex;flex-direction: column;gap: 20px;
-    &__row{}
-    &__info{text-align: center;text-align: center;}
-    &__error{font-weight: 400;color: red;}
-    &__success{color: #219700;font-weight: 500;}
-    .button{width: 100%;}
+    &__avatar{
+        justify-self: center;width: 150px;aspect-ratio: 1/1;border-radius: 50%;
+    }
+    &__name{
+        text-align: center;font-weight: 500;
+        &_admin{
+            &::after{content: ' (Chat admin)';font-weight: 300;font-size: .8em;vertical-align: middle;}
+        }
+    }
+    &__manage{
+        display: flex;flex-direction: column;gap: 10px;
+        .button{width: 100%;}
+    }
+    .button_action{}
+    .button_delete{}
 }
