--- a/src/components/chat-message/message.css
+++ b/src/components/chat-message/message.css
@@ -41,3 +41,17 @@
         img{position: relative;display: block;width: 100%;height: 100%;object-fit: cover;object-position: center;}
     }
 }
+
+.message-item{
+    position: relative;display: grid;grid-template: 'av msg' auto / 40px 1fr;grid-gap: 10px; margin: 0 0 10px 0;
+    &_self{
+
+    }
+    &_self &__wrap{background-color: #d0d4e1;background-image: linear-gradient(45deg, #cfe4ff, #d9c5f0);}
+    &__avatar{grid-area: av;width: 100%;aspect-ratio: 1/1;border-radius: 50%; background-color: #e3e3e3;font-size: 0;}
+    &__wrap{grid-area: msg;justify-self: start;display: inline-flex;flex-direction: column;gap: 10px;padding: 14px;border-radius: 10px; background-color: #e3e3e3;max-width: 500px;}
+    &__head{display: flex;justify-content: space-between;align-items: flex-end;gap: 14px;}
+    &__sender{font-weight: 400;}
+    &__time{font-size: .8em;opacity: .7;}
+    &__content{}
+}
