--- a/src/components/chat-users/chat-users.css
+++ b/src/components/chat-users/chat-users.css
@@ -17,6 +17,6 @@
     background-color: #e3e3e3;cursor: pointer;
     &_admin{background-color: #afeca6}
     *{cursor: pointer;}
-    &__avatar{width: 34px;aspect-ratio: 1/1;border-radius: 50%;}
+    &__avatar{width: 34px;aspect-ratio: 1/1;border-radius: 50%;font-size: 0;background-color: #a1a1a1;}
     &__name{font-weight: 400;}
 }
