--- a/src/components/modal-avatar/modal_avatar.css
+++ b/src/components/modal-avatar/modal_avatar.css
@@ -1,13 +1,15 @@
 .avatar-form{
     &__error:empty{display: none;}
+
     &__container{
         position: relative;display: flex;align-items: center;justify-content: center;width: 100%;height: 200px;
         border: 6px dashed var(--blue-color);background-color: #d2e6ff; padding: 20px;cursor: pointer;
+
         &::before{content: 'Drag and drop a file here or select it from your device';display: block;padding: 5px 10px;
             background-color: var(--blue-color);color: #fff;font-weight: 500; text-align: center;}
     }
     &__input{display: none;}
     &__preview-wrap{display: none;}
-    .button{width: 100%;margin: 14px 0 0 0;}
-    &__error{margin: 0 0 14px 0;color: red;font-weight: 400;}
+    .button{width: 100%;margin: 14px 0 0;}
+    &__error{margin: 0 0 14px;color: red;font-weight: 400;}
 }
