--- a/src/components/modal-password/modal-password.css
+++ b/src/components/modal-password/modal-password.css
@@ -1,4 +1,4 @@
 .passwd-form{
     position: relative;display: flex;flex-direction: column;
-    .button{margin: 10px 0 0 0;}
+    .button{margin: 10px 0 0;}
 }
