--- a/src/pages/chat/chat.css
+++ b/src/pages/chat/chat.css
@@ -2,10 +2,13 @@
     position: relative;width: 100%;height: 100vh;overflow: hidden; display: grid;
     grid-template: 'side header' auto 'side messages' 1fr 'side form' auto / 400px 1fr;
 }
+
 .chat{
     &__side{grid-area: side;position: relative; display: grid;grid-template: 'head' auto 'chats' 1fr / 100%;border-right: 1px solid var(--grey-color);}
+
     &__side-mng{
         position: relative;width: 100%;display: flex;align-items: center;justify-content: space-between;gap: 4px;padding: 0 10px;
+
         button:not(:last-child){
             &::after{content: '';display: block;width: 2px;height: 100%;background-color: #e3e3e3;}
         }
@@ -13,35 +16,37 @@
     &__side-head{position:relative; display: flex;flex-direction: column;align-items: flex-end;gap: 10px; padding: 20px;border-bottom: 1px solid var(--grey-color);}
     &__search-wrap{position: relative;width: 100%;}
     &__search-input{height: 40px;width: 100%;padding: 0 16px;border-radius: 20px;background-color: var(--grey-color);}
+
     &__bottom-mng{
-        position: relative;width: 100%;margin: 10px 0 0 0;padding: 0 10px;
-        .button{}
+        position: relative;width: 100%;margin: 10px 0 0;padding: 0 10px;
     }
     &__header{grid-area: header;position: relative;border-bottom: 1px solid var(--grey-color);}
-    &__messages{grid-area: messages;position: relative;height: 100%;padding: 20px 40px 20px 40px;overflow: auto;}
+    &__messages{grid-area: messages;position: relative;height: 100%;padding: 20px 40px;overflow: auto;}
     &__form-wrap{grid-area: form;position: relative;display: flex;justify-content: flex-start; border-top: 1px solid var(--grey-color);}
+
     &__form{
         position: relative;display: grid;grid-template: auto / 40px 40px 1fr 40px;align-items: center;grid-gap: 0 10px;
         padding: 10px 20px;width: 600px;
+
         &_attach{
             .chat__form-attach-btn{transform: rotate(45deg);}
         }
     }
     &__form-avatar-wrap{position: relative;aspect-ratio: 1/1;border-radius: 50%;overflow: hidden;}
     &__form-avatar{width: 100%;height: 100%;}
-    &__form-attach-btn{position: relative;aspect-ratio: 1/1;border-radius: 50%;background-color: var(--grey-color);font-weight: 500;
-        font-size: 30px;color: #a6a6a6;transition: transform .3s ease-out;}
-    &__form_attach{
-        .chat__form-attach-btn{transform: rotate(45deg);}
+
+    &__form-attach-btn{
+        position: relative;aspect-ratio: 1/1;border-radius: 50%;background-color: var(--grey-color);font-weight: 500;
+        font-size: 30px;color: #a6a6a6;transition: transform .3s ease-out;
+        &::before{content: '+';}
     }
 }
-.chat__form-attach-btn{
-    &::before{content: '+';}
-}
+
 .chat__message{
     height: 50px;padding: 0 16px;border-radius: 25px; background-color: var(--grey-color);
     &_error{color: #930000;background-color: #ffd4d4;font-weight: 600;}
 }
+
 .chat__form-submit{
     position: relative;aspect-ratio: 1/1;padding: 6px; border-radius: 50%;background-color: var(--blue-color);
     &::before{content: url('/public/send.svg');display: block;width: 100%;height: 100%;}
