--- a/src/pages/error/error.css
+++ b/src/pages/error/error.css
@@ -1,4 +1,4 @@
-.error-page{position: relative;width: 100%;height: 100vh;display: flex;align-items: center;justify-content: center;padding: 20px 20px 120px 20px; font-family: 'Source Code Pro', sans-serif;}
+.error-page{position: relative;width: 100%;height: 100vh;display: flex;align-items: center;justify-content: center;padding: 20px 20px 120px; font-family: 'Source Code Pro', sans-serif;}
 .error-page__wrap{position: relative;display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 20px;width: 400px;}
 .error-page__image-wrap{position: relative;width: 100%;}
 .error-page__image{position: relative;width: 100%;aspect-ratio: 4/2.2;object-fit: cover;object-position: top;}
