--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -1,29 +1,36 @@
 .form__wrap{
     position: relative;width: calc(100% - 40px);max-width: 340px;padding: 34px 20px;margin: 0 auto;border-radius: 6px;
-    border: 1px solid #e3e3e3; background-color: #fff;box-shadow: 0 4px 10px 0px #00000024;
-    .button{margin: 20px 0 0 0;}
+    border: 1px solid #e3e3e3; background-color: #fff;box-shadow: 0 4px 10px 0 #00000024;
+    .button{margin: 20px 0 0;}
 }
+
 .form__title{
-    grid-column-end: span 2;margin: 0 0 10px 0;text-align: center;
+    grid-column-end: span 2;margin: 0 0 10px;text-align: center;
     &_normweight{font-weight: 400;}
 }
+
 .form__error{
-    grid-column-end: span 2;margin: 0 0 14px 0;color: red;font-weight: 400;
+    grid-column-end: span 2;margin: 0 0 14px;color: red;font-weight: 400;
 }
+
 .form__login{
     .input{grid-column-end: span 2;}
 }
+
 .form__signup{
     .input{grid-column-end: span 2;}
 }
 .form__login-wrap{grid-column-end: span 2;display: grid;grid-template-columns: 1fr 1fr;grid-gap: 0 6px;}
+
 .form__row{
-    position: relative;margin: 0 0 10px 0;
-    &_margin-top{margin: 10px 0 0 0;}
+    position: relative;margin: 0 0 10px;
+    &_margin-top{margin: 10px 0 0;}
     &_2col{display: grid;grid-template: auto / 1fr 1fr;grid-gap: 0 6px;}
+
     .input,
     .button{margin: 0;}
 }
+
 .form__signup-wrap{
     grid-column-end: span 2;display: grid;grid-template-columns: 1fr 1fr;grid-gap: 0 6px;
 }
