--- a/src/pages/modals/modal_change_passwd/modal_change_passwd.css
+++ b/src/pages/modals/modal_change_passwd/modal_change_passwd.css
@@ -1,4 +1,4 @@
 .passwd-form{
     position: relative;display: flex;flex-direction: column;
-    .button{margin: 10px 0 0 0;}
+    .button{margin: 10px 0 0;}
 }
